--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mern_in_training",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server",
     "server": "nodemon server"
