--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "config": "^3.1.0",
     "express": "^4.17.0",
     "express-validator": "^5.3.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.9"
   },
   "devDependencies": {
