--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.2.0",
     "styled-components": "^4.2.0",
     "uuid": "^3.3.2"
   },
