--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mern_in_training",
+  "name": "chat-shack",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -17,7 +17,8 @@
     "express": "^4.17.0",
     "express-validator": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.5.9"
+    "mongoose": "^5.5.9",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
