--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chat-shack",
   "version": "1.0.0",
-  "description": "",
+  "description": "chat-shack",
   "main": "server.js",
   "scripts": {
     "start": "node server",
