--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-validator": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.9",
+    "request": "^2.88.0",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
